Fix alert word wrapping

--- a/client/galaxy/style/scss/overrides.scss
+++ b/client/galaxy/style/scss/overrides.scss
@@ -11,6 +11,10 @@ pre {
     white-space: pre;
 }
 
+.alert {
+    word-wrap: break-word;
+}
+
 .btn.hover {
     $btn: hover();
 }
